# pagedb

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  deny.toml  flux.toml
.config/: nextest.toml
.github/: labels.yml
.github/workflows/: ci.yml  labels.yml  release-prepare.yml  release-validate.yml  release.yml  test.yml
benches/: btree.rs  comparison.rs  segment.rs
benchmarks/engine-comparison/: Cargo.toml  btree.rs  comparison.rs
scripts/ci/: stamp_version.sh
src/: errors.rs  hex.rs  lib.rs  options.rs
src/btree/: internal.rs  leaf.rs  mod.rs  node.rs  overflow.rs  scan.rs  split.rs  tree.rs
src/btree/tree/: bulk.rs  core.rs  flush.rs  maintenance.rs  mod.rs  navigate.rs  read.rs  scan.rs  write.rs
src/catalog/: codec.rs  mod.rs
src/compaction/: freelist.rs  full.rs  helpers.rs  mod.rs  repack.rs  step.rs  types.rs
src/crypto/: aad.rs  cipher.rs  kdf.rs  key_manager.rs  keys.rs  mod.rs  nonce.rs
src/crypto/random/: identity.rs  mod.rs
src/observability/: mod.rs
src/pager/: cache.rs  core.rs  freelist.rs  header.rs  mod.rs
src/pager/format/: data_page.rs  mod.rs  page_kind.rs  segment_footer.rs  structural_header.rs
src/pager/format/segment_footer/: auth.rs  decode.rs  encode.rs  fields.rs  mod.rs  tests.rs
src/realm/: mod.rs  quota.rs
src/recovery/: deep_walk.rs  gc.rs  journal.rs  mod.rs  reconcile.rs
src/segment/: authenticated_metadata.rs  manifest.rs  mmap.rs  mod.rs  reader.rs  types.rs  writer.rs
src/segment/authenticated_metadata/: tests.rs
src/snapshot/: apply.rs  export.rs  mod.rs
src/txn/: db.rs  group_commit.rs  mod.rs  mode.rs  policy.rs  read.rs  write.rs
src/txn/db/: apply_journal.rs  catalog.rs  core.rs  gc.rs  manifest_validation.rs  misc.rs  mod.rs  open.rs  reader.rs  rekey.rs  segment.rs  snapshot.rs  util.rs
src/txn/db/open/: create.rs  existing.rs  mod.rs  modes.rs  recovery.rs
src/txn/db/rekey/: intent.rs  keyring.rs  main.rs  mod.rs  recovery.rs  segments.rs
src/txn/read/: mod.rs  txn.rs
src/txn/write/: commit.rs  counter.rs  mod.rs  spill.rs  txn.rs
src/vfs/: android.rs  memory.rs  mod.rs  tokio_backend.rs  traits.rs  types.rs  wasi.rs
src/vfs/gcd/: file.rs  mod.rs  vfs.rs
src/vfs/iocp/: file.rs  mod.rs  port.rs  vfs.rs
src/vfs/iouring/: file.rs  mod.rs  ring.rs  vfs.rs
src/vfs/opfs/: handle.rs  lock.rs  mod.rs  opfs_worker.js  path.rs  protocol.rs  vfs_impl.rs  worker.rs
tests/: btree_basic.rs  btree_g2.rs  catalog_basic.rs  cipher_aad_misroute.rs  cipher_rotation.rs  commit_history.rs  compaction_basic.rs  compaction_incremental.rs  counter_monotonicity.rs  counters.rs  crash_basic.rs  deferred_free_reclaim.rs  durability.rs  format_version_mismatch.rs  freelist_chain.rs  fsck_deep.rs  handle_modes.rs  header.rs  live_page_free_repro.rs  mmap_view.rs  overflow_refcount.rs  page_size_range.rs  quota_enforce.rs  reader_stall_policy.rs  recovery_basic.rs  rekey_basic.rs  scale_integrity_repro.rs  segment_basic.rs  segment_manifest_index.rs  smoke.rs  snapshot_basic.rs  spill_basic.rs  stats_basic.rs  structural_repro.rs  txn_basic.rs  vfs_iouring.rs  vfs_memory.rs  vfs_tokio.rs
tests/durability/: apply_journal_crash.rs  cross_process_lock.rs  mod.rs  reader_pin_durable.rs  reader_publication.rs  sync_dir_on_commit.rs  unpublished_commit.rs
tests/rekey/: mod.rs
