[package]
name = "pagedb"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Encrypted, portable, embedded page store with B+ tree and segment-file surfaces."
publish = false

[lib]

[dependencies]
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "io-util", "fs", "time"] }
bytes = "1"
tracing = "0.1"
parking_lot = "0.12"
rayon = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO"] }

[target.'cfg(target_os = "wasi")'.dependencies]
wasi = "0.13"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tempfile = "3"
memmap2 = "0.9"
lz4_flex = { version = "0.11", optional = true, default-features = false, features = ["safe-encode", "safe-decode"] }
gloo-worker = { version = "0.5", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemSyncAccessHandle",
    "FileSystemGetFileOptions",
    "FileSystemRemoveOptions",
    "StorageManager",
    "Navigator",
] }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"

[features]
default = []
compression = ["dep:lz4_flex"]
opfs = [
    "dep:gloo-worker",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "dep:web-sys",
    "dep:serde",
]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
redb = "2"
tempfile = "3"
aes-gcm = "0.10"
fluxbench = "0.1"
rocksdb = { version = "0.23", default-features = false, features = ["lz4"] }
rusqlite = { version = "0.32", features = ["bundled"] }
fastrand = "2"

[[bin]]
name = "pagedb-fsck"
path = "src/bin/pagedb-fsck.rs"

[[bench]]
name = "btree"
harness = false

[[bench]]
name = "segment"
harness = false

[[bench]]
name = "comparison"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
