[package]
name = "pagedb"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Encrypted, portable, embedded page store with B+ tree and segment-file surfaces."
repository = "https://github.com/nodedb-lab/pagedb"
homepage = "https://github.com/nodedb-lab/pagedb"
documentation = "https://docs.rs/pagedb"
readme = "README.md"
keywords = ["database", "encryption", "storage", "btree", "embedded"]
categories = ["database-implementations", "cryptography", "embedded"]
authors = ["Farhan Syah"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]

[dependencies]
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
subtle = "2.6"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
thiserror = "2"
bytes = "1"
tracing = "0.1"
parking_lot = "0.12"
rayon = "1"
getrandom = { version = "0.2", features = ["js"] }

# tokio's `rt-multi-thread` and `fs` features are not supported on
# `wasm32-unknown-unknown`. Split per target so OPFS builds compile.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.tokio]
version = "1"
features = ["rt", "rt-multi-thread", "macros", "sync", "io-util", "fs", "time"]

[target.'cfg(target_arch = "wasm32")'.dependencies.tokio]
version = "1"
features = ["rt", "macros", "sync", "io-util", "time"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Threading",
] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
dispatch2 = "0.3"
block2 = "0.6"
libc = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tempfile = "3"
memmap2 = "0.9"
lz4_flex = { version = "0.13", optional = true, default-features = false, features = [
    "safe-encode",
    "safe-decode",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
send_wrapper = { version = "0.6", optional = true }
futures = { version = "0.3", optional = true, default-features = false, features = [
    "alloc",
] }
web-sys = { version = "0.3", optional = true, features = [
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemSyncAccessHandle",
    "FileSystemGetFileOptions",
    "FileSystemRemoveOptions",
    "StorageManager",
    "Navigator",
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "MessageEvent",
    "ErrorEvent",
] }

[target.'cfg(any(target_os = "linux", all(target_os = "android", not(target_arch = "arm"))))'.dependencies]
io-uring = "0.7"

[features]
default = []
compression = ["dep:lz4_flex"]
opfs = [
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "dep:web-sys",
    "dep:serde",
    "dep:serde-wasm-bindgen",
    "dep:send_wrapper",
    "dep:futures",
]

[dev-dependencies]
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "test-util",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
redb = "2"
tempfile = "3"
aes-gcm = "0.10"
fluxbench = "0.1"
rocksdb = { version = "0.24", default-features = false, features = ["lz4"] }
rusqlite = { version = "0.40", features = ["bundled"] }
fastrand = "2"

[[bin]]
name = "pagedb-fsck"
path = "src/bin/pagedb-fsck.rs"

# `test = false`: these are benchmarks, not tests. Without it, `cargo test`
# (and nextest) compile every `harness = false` bench and run its `main` as a
# test — pulling heavy dev-deps (rocksdb → libclang) into the test build on
# every platform and executing benchmarks during the test run.
[[bench]]
name = "btree"
harness = false
test = false

[[bench]]
name = "segment"
harness = false
test = false

[[bench]]
name = "comparison"
harness = false
test = false

[profile.release]
lto = "thin"
codegen-units = 1
